nova-instancia-gitlab-14.0.5-YAMLS/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab-upgrade
  labels:
    app: gitlab
    component: scm
    tier: backend
spec:
  replicas: 1
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: gitlab
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: gitlab
        component: scm
        tier: backend
      annotations:
        prometheus.io/path: /-/metrics
        prometheus.io/port: "80"
        prometheus.io/scrape: "true"
    spec:
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 60
      securityContext:
        fsGroup: 1000
        runAsNonRoot: false
      volumes:
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: gitlab-data
        - name: gitlab-config
          persistentVolumeClaim:
            claimName: gitlab-config
        - name: gitlab-logs
          persistentVolumeClaim:
            claimName: gitlab-logs
        - name: gitlab-config-cm
          configMap:
            name: gitlab-cm
            defaultMode: 288
      containers:
        - name: gitlab-ce
          image: gitlab/gitlab-ce:14.10.5-ce.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 22
              name: ssh
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
          resources:
            requests:
              cpu: "2"
              memory: 5Gi
            limits:
              cpu: "4"
              memory: 10Gi
          volumeMounts:
            - name: gitlab-data
              mountPath: /var/opt/gitlab
            - name: gitlab-config
              mountPath: /etc/gitlab/
              subPath: gitlab.rb
            - name: gitlab-logs
              mountPath: /var/log/gitlab
