nova-instancia-gitlab-14.0.5-YAMLS/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab-upgrade
  labels:
    app: gitlab
spec:
  selector:
    app: gitlab
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
    - name: ssh
      port: 22
      targetPort: ssh
      protocol: TCP
